Fix bad-looking listitems on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -131,3 +131,25 @@ ul.showtime-list {
     grid-template-columns: 1fr;
   }
 }
+
+.home-nav-list {
+  list-style: disc;
+  padding-left: 2rem;
+  margin: 1rem 0;
+}
+
+.home-nav-list li {
+  margin-bottom: .3rem;
+  line-height: 1.4;
+}
+
+/* .home-nav-list a {
+  display: block;
+  padding: 0.5rem 0;
+} */
+
+@media (max-width: 480px) {
+  .home-nav-list {
+    padding-left: 1.5rem;
+  }
+}
